fix: updated material with better licenses

--- a/talk/index.html
+++ b/talk/index.html
@@ -84,7 +84,7 @@
         <section>
           <h1>Introduzione a Detectron2</h1>
           <h2>Alessandro Re</h2>
-          <h4>htttttps://///github.com/akiross/intro-to-d2</h4>
+          <h4>https://github.com/akiross/intro-to-d2</h4>
         </section>
         <section>
           <section data-auto-animate>
@@ -272,18 +272,10 @@
           <section data-auto-animate>
             <h2>Machine Learning</h2>
             <img src="images/ml_con_emoji.svg" />
-            <!--p>
-              Problema → Raccolta Dati → Addestramento Modello → Produzione
-              Artefatto → Inferenza
-            </p-->
           </section>
           <section data-auto-animate>
             <h2>Machine Learning</h2>
             <img src="images/ml_con_emoji_pretrain.svg" />
-            <!--p>
-              Problema → Raccolta Dati →
-              <s>Addestramento Modello → Produzione Artefatto</s> → Inferenza
-            </p-->
           </section>
         </section>
         <section>
@@ -307,7 +299,7 @@
 mkdir workspace &amp;&amp; cd workspace 
 
 # scarico una foto di esempio
-curl -o input.jpg https://live.staticflickr.com/1490/25269050550_5bf6d511f4_b.jpg
+curl -o input.jpg https://upload.wikimedia.org/wikipedia/commons/4/46/Bear_Alaska_%283%29.jpg
 
 # scarico anche detectron2 che contiene lo script di demo e le configurazioni
 git clone https://github.com/facebookresearch/detectron2
